--- a/lang/id.json
+++ b/lang/id.json
@@ -2,7 +2,7 @@
     "(and :count more error)": "(dan :count kesalahan lainnya)",
     "(and :count more errors)": "(dan :count kesalahan lainnya)|(dan :count kesalahan lainnya)|(dan :count kesalahan lainnya)",
     "A decryption key is required.": "Kunci dekripsi diperlukan.",
-    "A new verification link has been sent to the email address you provided during registration.": "Tautan verifikasi baru telah dikirim ke alamat surel yang Anda berikan saat pendaftaran.",
+    "A new verification link has been sent to the email address you provided during registration.": "Tautan verifikasi baru telah dikirim ke email yang Anda berikan saat pendaftaran.",
     "A new verification link has been sent to your email address.": "Tautan verifikasi baru telah dikirim ke alamat email Anda.",
     "All rights reserved.": "Hak Cipta Dilindungi.",
     "Already registered?": "Sudah terdaftar?",
@@ -15,7 +15,7 @@
     "Dashboard": "Dasbor",
     "Delete Account": "Hapus Akun",
     "Email": "Surel",
-    "email": ":Attribute harus berupa alamat surel yang valid.",
+    "email": ":Attribute harus berupa email yang valid.",
     "Email Password Reset Link": "Tautan Pengaturan Ulang Kata Sandi Surel",
     "Encrypted environment file already exists.": "Enkripsi file environment sudah ada.",
     "Encrypted environment file not found.": "Enkripsi file environment tidak ditemukan.",
@@ -25,7 +25,7 @@
     "errors": "kesalahan",
     "Forbidden": "Dilarang",
     "Forgot your password?": "Lupa kata sandi Anda?",
-    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Lupa kata sandi Anda? Tidak masalah. Beri tahu kami alamat surel Anda dan kami akan mengirimkan surel berisi tautan pengaturan ulang kata sandi yang memungkinkan Anda memilih kata sandi yang baru.",
+    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Lupa kata sandi Anda? Tidak masalah. Beri tahu kami email Anda dan kami akan mengirimkan surel berisi tautan pengaturan ulang kata sandi yang memungkinkan Anda memilih kata sandi yang baru.",
     "Go to page :page": "Ke halaman :page",
     "Hello!": "Halo!",
     "If you did not create an account, no further action is required.": "Jika Anda tidak membuat akun, Anda tidak perlu melakukan apapun.",
@@ -51,7 +51,7 @@
     "Password": "Kata Sandi",
     "password": "Kata sandi salah.",
     "Payment Required": "Pembayaran Diperlukan",
-    "Please click the button below to verify your email address.": "Silakan klik tombol di bawah untuk memverifikasi alamat surel Anda.",
+    "Please click the button below to verify your email address.": "Silakan klik tombol di bawah untuk memverifikasi email Anda.",
     "Profile": "Profil",
     "Profile Information": "Informasi Profil",
     "Regards,": "Salam,",
@@ -66,7 +66,7 @@
     "Server Error": "Terjadi Kesalahan Server",
     "Service Unavailable": "Layanan Tidak Tersedia",
     "Showing": "Menampilkan",
-    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Terima kasih sudah mendaftar! Sebelum memulai, bisa kah Anda memverifikasi alamat surel dengan mengklik tautan yang kami kirim? Jika Anda tidak menerima surel, kami akan mengirim ulang.",
+    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Terima kasih sudah mendaftar! Sebelum memulai, bisa kah Anda memverifikasi email dengan mengklik tautan yang kami kirim? Jika Anda tidak menerima surel, kami akan mengirim ulang.",
     "The given data was invalid.": "Data yang diberikan tidak valid.",
     "The response is not a streamed response.": "Responsnya bukan respons yang dialirkan.",
     "The response is not a view.": "Responsnya bukanlah pandangan.",
@@ -78,10 +78,10 @@
     "Too Many Requests": "Terlalu Banyak Permintaan",
     "Unauthorized": "Tidak Diizinkan",
     "Update Password": "Perbarui Kata Sandi",
-    "Update your account's profile information and email address.": "Perbarui informasi profil dan alamat surel akun Anda.",
-    "Verify Email Address": "Verifikasi Alamat Surel",
+    "Update your account's profile information and email address.": "Perbarui informasi profil dan email akun Anda.",
+    "Verify Email Address": "Verifikasi Email",
     "Whoops!": "Aduh!",
     "You are receiving this email because we received a password reset request for your account.": "Anda menerima surel ini karena kami menerima permintaan pengaturan ulang kata sandi untuk akun anda.",
     "You're logged in!": "Anda sudah masuk!",
-    "Your email address is unverified.": "Alamat surel Anda belum diverifikasi."
+    "Your email address is unverified.": "Email Anda belum diverifikasi."
 }
